# vibetrack

./: .gitignore  README.md  env.example.json  env.local.example.json  env.production.example.json  pubspec.yaml  render.yaml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
backend/: .env.example  .env.render.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  firebase.py  logging.py  security.py
backend/app/db/: __init__.py  models.py
backend/app/modules/admin/: router.py
backend/app/modules/admin/ui/: notifications_console.html
backend/app/modules/auth/: router.py
backend/app/modules/config/: router.py
backend/app/modules/feed/: models.py  router.py  schemas.py
backend/app/modules/feed/service/: __init__.py  feed_service.py
backend/app/modules/health/: router.py
backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
backend/app/modules/profiles/: models.py  router.py  schemas.py
backend/app/modules/profiles/service/: __init__.py  profile_service.py
backend/app/modules/rides/: models.py  router.py  schemas.py
backend/app/modules/rides/service/: __init__.py  ride_service.py
backend/app/modules/zones/: models.py  router.py  schemas.py
backend/app/modules/zones/service/: __init__.py  zone_service.py
backend/scripts/: check_runtime.py
backend/vibetrack_backend.egg-info/: SOURCES.txt  requires.txt
docs/: backend-deployment.md  backend-execution-and-integration-plan.md  bloc-migration-plan.md  (+2 more)
(+96 files in other folders)
